--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,6 +61,7 @@ body {
     padding: 5px 10px;
     background-color: lightseagreen;
 }
+
 .edit-button {
     position: absolute;
     top: 65px;
@@ -71,6 +72,18 @@ body {
     background-color: pink;
     text-decoration: none;
 }
+
+.delete-button {
+    position: absolute;
+    top: 105px;
+    right: 25px;
+    color: black;
+    border: 1px solid grey;
+    padding: 5px 10px;
+    background-color: red;
+    text-decoration: none;
+}
+
 .save-button:hover {
     background-color: green;
     color: white;
